Fixing header on iphone

--- a/Web/Content/books.css
+++ b/Web/Content/books.css
@@ -11,7 +11,7 @@
 }
 
 .navbar {
-    min-height: 44px;
+    min-height: 70px;
 }
 
 .navbar-brand {
